--- a/Contact/contact.html
+++ b/Contact/contact.html
@@ -19,21 +19,21 @@
 </head>
 <body>
     <header>
-        <a href="./index.html">Home</a> &nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="./project.html">Project</a> &nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="./skills.html">Skills</a> &nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="../index.html">Home</a> &nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="../Project/project.html">Project</a> &nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="../Skill/skills.html">Skills</a> &nbsp;&nbsp;&nbsp;&nbsp;
         <a href="./contact.html">Contact</a> &nbsp;&nbsp;&nbsp;&nbsp;
     </header>
     <h1>My Contact Information</h1>
         <address><h2>Phone and Whatsapp Number</h2><br>
                
                   <h2>03015250633</h2><br>
-                  <img src="./whatsapp logo.webp" width="50">
+                  <img src="../assets/whatsapp logo.webp" width="50">
 
         </address>
         <h1>My Email</h1>
         <p><h3>bashirullah808@gmail.com</h3></p>
-        <img src="./email icon.webp" width="50">
+        <img src="../assets/email icon.webp" width="50">
         <table width="100%">
             <caption><h1>Contact Information</h1></caption>
             <thead>
@@ -51,7 +51,7 @@
         </table>
        
              <h1>My Linkedin</h1>
-         <img src="./linkedin logo.jpeg" width="50">    <br><br>
+         <img src="../assets/linkedin logo.jpeg" width="50">    <br><br>
         <a href="https://www.linkedin.com/in/bashir-ullah-458b282b1/" target="_blank">Go to My Linkedin</a>
         <br><br>
         <fieldset>
