--- a/Project/project.html
+++ b/Project/project.html
@@ -22,10 +22,10 @@
 </head>
 <body>
     <header>
-        <a href="./index.html">Home</a> &nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="../index.html">Home</a> &nbsp;&nbsp;&nbsp;&nbsp;
         <a href="./project.html">Project</a> &nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="./skills.html">skills</a> &nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="./contact.html">Contact</a> &nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="../Skill/skills.html">skills</a> &nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="../Contact/contact.html">Contact</a> &nbsp;&nbsp;&nbsp;&nbsp;
     </header>
     <h1>My Project</h1>
     <h2>First Project</h2>
@@ -36,7 +36,7 @@
      voluptate deleniti veritatis a dicta. Tempora debitis laboriosam vero exercitationem recusandae quidem this i<br>
     laudantium saepe dicta repudiandae. At facere fugiat cum.
     <h1>Android_phone</h1>
-    <img src="./android 13.jpg" width="400">
+    <img src="../assets/android 13.jpg" width="400">
     <h2>Second project</h2>
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis, quibusdam rem. Optio quibusdam, minus eius <br>
     perspiciatis laudantium hic fuga expedita tempora repudiandae nesciunt tenetur natus cumque. Aliquid accusantium<br>
@@ -46,7 +46,7 @@
       necessitatibus tempore asperiores eum tenetur, inventore aperiam quia molestias laudantium magni
       laborum?
       <h1>Brt Service Peshawar</h1>
-      <img src="./brt_peshawar.jpg" width="500">
+      <img src="../assets/brt_peshawar.jpg" width="500">
       <table width="100%">
        
         <thead>
