--- a/Skill/skills.html
+++ b/Skill/skills.html
@@ -19,13 +19,13 @@
 </head>
 <body>
     <header>                  
-        <a href="./index.html">Home</a> &nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="./project.html">Project</a> &nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="../index.html">Home</a> &nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="../Project/project.html">Project</a> &nbsp;&nbsp;&nbsp;&nbsp;
         <a href="./skills.html">Skills</a> &nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="./contact.html">Contact</a> &nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="../Contact/contact.html">Contact</a> &nbsp;&nbsp;&nbsp;&nbsp;
     </header>
     <h1>1.MS Office</h1>
-    <img src="./Ms logo.png" width="300">
+    <img src="../assets/Ms logo.png" width="300">
     <ul>
         <li>Word</li>
         <li>Excel</li>
@@ -47,7 +47,7 @@
         </thead>
     </table>
     <h1>2.Wordpress</h1>
-    <img src="./wordpress logo.jpg" width="300">
+    <img src="../assets/wordpress logo.jpg" width="300">
 
     
 </body>
