--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 <body>
     <header>
         <a href="./index.html">Home</a> &nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="./project.html">Project </a> &nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="./skills.html">Skills</a> &nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="./contact.html">Contact</a> &nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="./Project/project.html">Project </a> &nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="./Skill/skills.html">Skills</a> &nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="./Contact/contact.html">Contact</a> &nbsp;&nbsp;&nbsp;&nbsp;
     </header>
-    <img src="./IMG-20220930-WA0006.jpg" width="400" height="700">
+    <img src="./assets/IMG-20220930-WA0006.jpg" width="100" height="150">
     
     <h1>My Portfolio</h1>
     <p >I am a Bachelor Computer Science Student at University Of Agriculture Peshawar| Aspiring Web Developer 💻 |
