--- a/Contact/contact.html
+++ b/Contact/contact.html
@@ -4,18 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>contact page</title>
-    <style>
-        table,tr,th{
-            background-color: blanchedalmond;
-            border: 1px solid black;
-            border-collapse: collapse;
-            text-align: center;
-            
-        }
-        thead,th{
-            background-color: brown;
-        }
-    </style>
+    <link rel="stylesheet" href="../assets/css/style.css">
 </head>
 <body>
     <header>
@@ -37,7 +26,7 @@
         <table width="100%">
             <caption><h1>Contact Information</h1></caption>
             <thead>
-                <tr>
+                <tr class="header_area">
                     <th>Whatsapp Number</th>
                     <th>Email</th>
                     <th>Linkedin</th>
