--- a/index.html
+++ b/index.html
@@ -4,22 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link rel="stylesheet" href="style.css">
-    <!--
-    
-    <style>
-        table,tr,td,th{
-            background-color: #f0f0f0;
-            border: 1px solid black;
-            border-collapse: collapse;
-            text-align: center;
-        }
-        thead,th{
-            background-color: aqua;
-        }
-    </style>
-    -->
-    
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
     <header>
