--- a/Contact/contact.html
+++ b/Contact/contact.html
@@ -23,15 +23,15 @@
         <h1>My Email</h1>
         <p><h3>bashirullah808@gmail.com</h3></p>
         <img src="../assets/email icon.webp" width="50">
-        <table width="100%">
-            <caption><h1>Contact Information</h1></caption>
+        <table width="100%" class="contact-page">
+            <caption id="caption"><h1>Contact Information</h1></caption>
             <thead>
-                <tr class="header_area">
+                <tr class="cotact-page">
                     <th>Whatsapp Number</th>
                     <th>Email</th>
                     <th>Linkedin</th>
                 </tr>
-                <tr>
+                <tr class="contact-page">
                     <td>03015250633</td>
                     <td>bashirullah808@gmail.com</td>
                     <td>Linkedin</td>
@@ -43,7 +43,7 @@
          <img src="../assets/linkedin logo.jpeg" width="50">    <br><br>
         <a href="https://www.linkedin.com/in/bashir-ullah-458b282b1/" target="_blank">Go to My Linkedin</a>
         <br><br>
-        <fieldset>
+        <fieldset class="form">
             <form>
                 
                 <input type="text" placeholder="Enter Your Name">
@@ -61,6 +61,7 @@
 
                 <br><br>
                 <input type="submit" value="submit button">
+                </form>
 
                 
         </fieldset>
