--- a/Project/project.html
+++ b/Project/project.html
@@ -33,7 +33,7 @@
       laborum?
       <h1>Brt Service Peshawar</h1>
       <img src="../assets/brt_peshawar.jpg" width="500">
-      <table width="100%">
+      <table width="100%" class="project">
        
         <thead>
             <tr class="project">
@@ -42,7 +42,7 @@
                 <th>Service Time</th>
             </tr>
             
-            <tr>
+            <tr id="Transport">
                 <td>Urban Transport System</td>
                 <td>Dr:Tariq Usman</td>
                 <td>6am to 10pm</td>
