--- a/Skill/skills.html
+++ b/Skill/skills.html
@@ -20,19 +20,21 @@
         <li>Excel</li>
         <li>Power Point</li>
     </ul>
-    <table width="100%">
-        <caption><h1>Skill Table</h1></caption>
+    <table width="100%" class="skills">
+        <caption id="skills-head"><h1>Skills Table</h1></caption>
         <thead>
-            <tr id="skills">
+            
+            <tr class="skills">
                 <th>word</th>
                 <th>Excel</th>
-                <th>Power Point</th>
+                <th >Power Point</th>
             </tr>
-            <tr>
+            <tr class="skills">
                 <td>Easily Write Application,Letter etc</td>
                 <td>Easily create data entry</td>
                 <td>Make Easily Slide</td>
             </tr>
+        
         </thead>
     </table>
     <h1>2.Wordpress</h1>
